--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/server.js --watch"
+    "test": "mocha server/**/*.test.js --watch"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +14,10 @@
     "express": "^4.16.4",
     "mongodb": "^3.1.10",
     "mongoose": "^4.5.9"
+  },
+  "devDependencies": {
+    "expect": "^1.20.2",
+    "mocha": "^3.0.2",
+    "supertest": "^2.0.0"
   }
 }
