--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha server/**/*.test.js --watch"
+    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha server/**/*.test.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,7 @@
     "lodash": "^4.17.11",
     "mongodb": "^3.1.10",
     "mongoose": "^4.5.9",
+    "nodemon": "^1.18.9",
     "validator": "^10.10.0"
   },
   "devDependencies": {
